vendor/vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcfile-fields-missing.warc
WARC/1.0
WARC-Type:
WARC-Record-ID:
WARC-Date:
Content-Length:
Content-Type:
WARC-Concurrent-To:
WARC-Block-Digest:
WARC-Payload-Digest:
WARC-IP-Address:
WARC-Refers-To:
WARC-Target-URI:
WARC-Truncated:
WARC-Warcinfo-ID:
WARC-Filename:
WARC-Profile:
WARC-Identified-Payload-Type:
WARC-Segment-Origin-ID:
WARC-Segment-Number:
WARC-Segment-Total-Length:

